--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#00A9FF</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_farmologi</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_milkymo</item>
         <item name="postSplashScreenTheme">@style/Theme.SplashScreen.NoActionBar</item>
     </style>
 </resources>
